refactor: replace @Autowired with constructor injection for improved dependency management